<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_form"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/userNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headingTop"
            android:text="@string/user_name_text_view"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/validUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/tvTop"
            android:layout_marginRight="@dimen/right"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/userNameTV" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/email_text_view"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/validUserName" />

        <TextView
            android:id="@+id/validEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/tvTop"
            android:layout_marginRight="@dimen/right"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/validEmail" />

        <TextView
            android:id="@+id/validPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/tvTop"
            android:layout_marginRight="@dimen/right"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <TextView
            android:id="@+id/pinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/pin_code"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/validPhoneNumber" />

        <TextView
            android:id="@+id/validPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/tvTop"
            android:layout_marginRight="@dimen/right"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/pinCode" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/address"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/validPinCode" />

        <TextView
            android:id="@+id/validAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/tvTop"
            android:layout_marginRight="@dimen/right"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/confirmData"
            app:layout_constraintTop_toBottomOf="@+id/validAddress" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/cancelData"
            app:layout_constraintTop_toBottomOf="@+id/confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>